--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.5.1.2.20161216
+version:         2.5.2
 cabal-version:   >= 1.10
 build-type:      Custom
 license:         OtherLicense
@@ -590,7 +590,7 @@ library
 executable agda
   hs-source-dirs: src/main
   main-is:        Main.hs
-  build-depends:  Agda == 2.5.1.2.20161216
+  build-depends:  Agda == 2.5.2
                   -- Nothing is used from the following package,
                   -- except for the prelude.
                 , base >= 4.6.0.1 && < 6
@@ -720,7 +720,7 @@ test-suite internal-tests
                 , InternalTests.Utils.Trie
                 , InternalTests.Utils.Warshall
 
-  build-depends:  Agda == 2.5.1.2.20161216
+  build-depends:  Agda == 2.5.2
                 , array >= 0.4.0.1 && < 0.6
                 , base >= 4.6.0.1 && < 4.10
                 , containers >= 0.5.0.0 && < 0.6
