--- a/Agda.cabal
+++ b/Agda.cabal
@@ -83,6 +83,11 @@ source-repository head
   type:     git
   location: https://github.com/agda/agda.git
 
+source-repository this
+  type:     git
+  location: https://github.com/agda/agda/tree/v2.5.2.
+  tag:      v2.5.2
+
 flag cpphs
   default:     True
   manual:      True
