Revert "[ 2.5.2 release, #2337 ] Removed `-Werror` and `-fprof-auto` from Agda.cabal."
This reverts commit 3afac6e84972eaf130085ce9494c641c89d6f2d5.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -510,6 +510,7 @@ library
 
   -- Initially, we disable all the warnings.
   ghc-options: -w
+               -Werror
 
   -- This option must be the first one after disabling the warnings. See
   -- Issue #2094.
@@ -568,6 +569,8 @@ library
                  -Wnoncanonical-monoid-instances
                  -Wsemigroup
                  -Wunused-foralls
+
+  ghc-prof-options: -fprof-auto
 
   default-language: Haskell2010
   default-extensions: ConstraintKinds
