--- a/lib.cabal
+++ b/lib.cabal
@@ -1,10 +1,13 @@
 name:            lib
-version:         0.12
-cabal-version:   >= 1.8
+version:         0.13
+cabal-version:   >= 1.10
 build-type:      Simple
 description:     Helper programs.
 license:         MIT
-tested-with:     GHC == 7.10.3
+tested-with:        GHC == 7.6.3
+                    GHC == 7.8.4
+                    GHC == 7.10.3
+                    GHC == 8.0.1
 
 executable GenerateEverything
   hs-source-dirs:   .
