--- a/lib.cabal
+++ b/lib.cabal
@@ -4,14 +4,15 @@ cabal-version:   >= 1.10
 build-type:      Simple
 description:     Helper programs.
 license:         MIT
-tested-with:        GHC == 7.6.3
-                    GHC == 7.8.4
-                    GHC == 7.10.3
-                    GHC == 8.0.1
+tested-with:     GHC == 7.6.3
+                 GHC == 7.8.4
+                 GHC == 7.10.3
+                 GHC == 8.0.1
 
 executable GenerateEverything
   hs-source-dirs:   .
   main-is:          GenerateEverything.hs
+  default-language: Haskell2010
   build-depends:      base >= 4.6.0.1 && < 4.10
                     , filemanip >= 0.3.6.2 && < 0.4
                     , filepath >= 1.3.0.1 && < 1.5
@@ -19,5 +20,6 @@ executable GenerateEverything
 executable AllNonAsciiChars
   hs-source-dirs:   .
   main-is:          AllNonAsciiChars.hs
+  default-language: Haskell2010
   build-depends:      base >= 4.6.0.1 && < 4.10
                     , filemanip >= 0.3.6.2 && < 0.4
