--- a/Agda.cabal
+++ b/Agda.cabal
@@ -358,6 +358,7 @@ library
                     Agda.TypeChecking.DropArgs
                     Agda.TypeChecking.Empty
                     Agda.TypeChecking.EtaContract
+                    Agda.TypeChecking.EtaExpand
                     Agda.TypeChecking.Errors
                     Agda.TypeChecking.Free
                     Agda.TypeChecking.Free.Lazy
