Fixed #2389: BUILTIN REFL is subsumed by BUILTIN EQUALITY
See also #720.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -581,6 +581,7 @@ library
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
+                    , MultiWayIf
                     , NamedFieldPuns
                     , RankNTypes
                     , RecordWildCards
@@ -752,6 +753,7 @@ test-suite internal-tests
                      , FunctionalDependencies
                      , LambdaCase
                      , MultiParamTypeClasses
+                     , MultiWayIf
                      , NamedFieldPuns
                      , RankNTypes
                      , RecordWildCards
