[ #1996 ] Partialy reverted the fix.
Read the docs fails when using the setting `latex_engine='xelatex'`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -473,8 +473,7 @@ script:
 
   - if [[ $TEST = "DOC" ]]; then
        sphinx-build --version &&
-       make doc-html &&
-       make doc-pdf;
+       make doc-html;
     fi
 
 ##############################################################################
