--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ sudo: required
 
 cache:
   directories:
+  - $HOME/.cabal
   - $HOME/.stack
 
 ##############################################################################
