--- a/.travis.yml
+++ b/.travis.yml
@@ -102,15 +102,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=CPP_AND_DEBUG GHC_VER=8.0.1 BUILD=STACK ARGS="--stack-yaml stack-8.0.1.yaml --system-ghc"
-      addons:
-        apt:
-          packages:
-            - ghc-8.0.1
-          sources:
-            - hvr-ghc
-
-    - env: TEST=STACKAGE GHC_VER=8.0.1 BUILD=STACK ARGS="--stack-yaml stack-8.0.1.yaml --system-ghc"
+    - env: TEST=STACKAGE_CPP_AND_DEBUG GHC_VER=8.0.1 BUILD=STACK ARGS="--stack-yaml stack-8.0.1.yaml --system-ghc"
       addons:
         apt:
           packages:
@@ -175,7 +167,7 @@ before_install:
 
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" || $TEST = "UHC" ]]; then
        export PATH=/opt/ghc/$GHC_VER/bin:/opt/cabal/$CABAL_VER/bin:/opt/alex/3.1.7/bin:/opt/happy/1.19.5/bin:$PATH;
-    elif [[ $TEST = "CPP_AND_DEBUG" || $TEST = "STACKAGE" ]]; then
+    elif [[ $TEST = "STACKAGE_CPP_AND_DEBUG" ]]; then
          export PATH=/opt/ghc/$GHC_VER/bin:$PATH;
     elif [[ $TEST = "ghc-7.8.4-transformers-0.3.0.0" ]]; then
          export PATH=/opt/ghc/$GHC_VER/bin:/opt/happy/1.19.5/bin:$PATH;
@@ -240,10 +232,6 @@ install:
 
 # N.B. that we use the `--force-reinstalls` option [Issue 1520].
 
-# The `--test` option is not required when $TEST = "CPP_AND_DEBUG"
-# because the flags `cpphs` and `debug` are not used with the Cabal
-# tests-suites.
-
 # The version installed of cpphs in ghc-7.8.4-transformers-0.3.0.0
 # should match the lower version required in Agda.cabal [Issue #2315].
 
@@ -255,9 +243,7 @@ install:
          stack $ARGS --no-terminal install alex-3.1.7 &&
          stack $ARGS --no-terminal install cpphs-1.20.2 &&
          stack build $ARGS --no-terminal --test --only-dependencies;
-    elif [[ $TEST = "CPP_AND_DEBUG" ]]; then
-         stack build $ARGS --no-terminal --only-dependencies;
-    elif [[ $TEST = "STACKAGE" ]]; then
+    elif [[ $TEST = "STACKAGE_CPP_AND_DEBUG" ]]; then
          stack build $ARGS --no-terminal --test --only-dependencies;
     fi
 
@@ -332,28 +318,14 @@ install:
 # dependencies are not installed again.
 
 ##############################################################################
-# Testing compilation with cpp instead of cpphs [Issue #1647]
 
-# N.B. that this test is not include in the Makefile tests.
+# Testing compilation with Stackage, cpp instead of cpphs
+# [Issue #1647] and the `debug` flag [Issue #2070]
 
-  - if [[ $TEST = "CPP_AND_DEBUG" ]]; then
-       stack build $ARGS --no-terminal --flag Agda:-cpphs;
-    fi
+# N.B. that these tests are not include in the Makefile tests.
 
-##############################################################################
-# Testing compilation using the `debug` flag [Issue #2070]
-
-# N.B. that this test is not include in the Makefile tests.
-
-  - if [[ $TEST = "CPP_AND_DEBUG" ]]; then
-       stack build $ARGS --no-terminal --flag Agda:debug;
-    fi
-
-##############################################################################
-# Testing compilation using stack
-
-  - if [[ $TEST = "STACKAGE" ]]; then
-       stack build $ARGS --no-terminal --test --no-run-tests;
+  - if [[ $TEST = "STACKAGE_CPP_AND_DEBUG" ]]; then
+       stack build $ARGS --no-terminal --test --no-run-tests --flag Agda:-cpphs --flag Agda:debug;
     fi
 
 ##############################################################################
