--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=UHC GHC_VER=8.0.1 BUILD=CABAL CABAL_VER=1.24
+    - env: TEST=UHC_FLAG GHC_VER=8.0.1 BUILD=CABAL CABAL_VER=1.24
       addons:
         apt:
           packages:
@@ -165,7 +165,7 @@ matrix:
 ##############################################################################
 before_install:
 
-  - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" || $TEST = "UHC" ]]; then
+  - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" || $TEST = "UHC_FLAG" ]]; then
        export PATH=/opt/ghc/$GHC_VER/bin:/opt/cabal/$CABAL_VER/bin:/opt/alex/3.1.7/bin:/opt/happy/1.19.5/bin:$PATH;
     elif [[ $TEST = "STACKAGE_CPP_AND_DEBUG" ]]; then
          export PATH=/opt/ghc/$GHC_VER/bin:$PATH;
@@ -237,7 +237,7 @@ install:
 
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" ]]; then
        cabal install --enable-tests --only-dependencies --force-reinstalls;
-    elif [[ $TEST = "UHC" ]]; then
+    elif [[ $TEST = "UHC_FLAG" ]]; then
          cabal install --enable-tests --only-dependencies --force-reinstalls -f uhc;
     elif [[ $TEST = "ghc-7.8.4-transformers-0.3.0.0" ]]; then
          stack $ARGS --no-terminal install alex-3.1.7 &&
@@ -429,7 +429,7 @@ script:
 ##############################################################################
 # Testing compilation using the `uhc` flag
 
-  - if [[ $TEST = "UHC" ]]; then
+  - if [[ $TEST = "UHC_FLAG" ]]; then
        make BUILD_DIR=$BUILD_DIR CABAL_OPTS="-v2 -f uhc" install-bin;
     fi
 
