--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -1,8 +1,7 @@
 name:                agda2mlf
 version:             0.1.0.0
-synopsis:            Initial project template from stack
-description:         Please see README.md
-homepage:            https://github.com/janmasrovira/agda2mlf#readme
+synopsis:            -
+description:         Agda to Ocaml
 license:             BSD3
 license-file:        LICENSE
 author:              Jan Mas Rovira
@@ -15,7 +14,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Malfunction
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -35,7 +34,3 @@ test-suite agda2mlf-test
                      , agda2mlf
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
-
-source-repository head
-  type:     git
-  location: https://github.com/janmasrovira/agda2mlf
