Add skeletal implementation of pretty-printer and AST for malfunction

--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -2,20 +2,20 @@ name:                agda2mlf
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            https://github.com/janmasrovira/agda2mlf#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Jan Mas Rovira
-maintainer:          janmasrovira@gmail.com
-copyright:           Jan Mas Rovira
-category:            unspecified
+author:              Jan Mas Rovira, Frederik Hanghøj Iversen
+maintainer:          janmasrovira@gmail.com, hanghj@student.chalmers.se
+copyright:           Jan Mas Rovira, Frederik Hanghøj Iversen
+category:            Compiler
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Malfunction.AST
+                     , Malfunction.Print
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -38,4 +38,4 @@ test-suite agda2mlf-test
 
 source-repository head
   type:     git
-  location: https://github.com/janmasrovira/agda2mlf
+  location: git@gitlab.com:janmasrovira/agda2mlf.git
