[ compiler ] new: Agda.Compiler.Backend interface for backend writers
purpose: make it easy to write stand-alone Agda backends

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -208,6 +208,7 @@ library
                     Agda.Auto.Syntax
                     Agda.Auto.Typecheck
                     Agda.Benchmarking
+                    Agda.Compiler.Backend
                     Agda.Compiler.CallCompiler
                     Agda.Compiler.Common
                     Agda.Compiler.Epic.AuxAST
