--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -16,7 +16,9 @@ library
   hs-source-dirs:      src
   exposed-modules:     Malfunction.AST
                      , Malfunction.Print
+                     , Agda.Treeless
   build-depends:       base >= 4.7 && < 5
+                     , containers == 0.5.*
   default-language:    Haskell2010
 
 executable agda2mlf-exe
