[ backends ] moved indexed list stuff to Utils.IndexedList

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -469,6 +469,7 @@ library
                     Agda.Utils.HashMap
                     Agda.Utils.Haskell.Syntax
                     Agda.Utils.Impossible
+                    Agda.Utils.IndexedList
                     Agda.Utils.IO.Binary
                     Agda.Utils.IO.Directory
                     Agda.Utils.IO.UTF8
