add agda dependency

--- a/stack.yaml
+++ b/stack.yaml
@@ -37,6 +37,10 @@ resolver: lts-7.15
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+- location:
+    git: git@github.com:agda/agda.git
+    commit: d4e466d364534a0128276d3bbedcd6830669e3b6
+    extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
