--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -16,8 +16,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Malfunction.AST
                      , Malfunction.Print
-                     , Agda.Treeless
   build-depends:       base >= 4.7 && < 5
+                     , Agda >= 2.5.2
                      , containers == 0.5.*
   default-language:    Haskell2010
 
