--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -27,6 +27,7 @@ executable agda2mlf-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , agda2mlf
+                     , mtl == 2.2.*
   default-language:    Haskell2010
 
 test-suite agda2mlf-test
