Add Compiler to exposed modules

--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -16,6 +16,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Malfunction.AST
                      , Malfunction.Print
+                     , Compiler
   build-depends:       base >= 4.7 && < 5
                      , Agda >= 2.5.2
                      , containers == 0.5.*
