--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -20,6 +20,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , Agda >= 2.5.2
                      , containers == 0.5.*
+                     , mtl == 2.2.*
   default-language:    Haskell2010
 
 executable agda2mlf-exe
