--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -32,15 +32,18 @@ executable agda2mlf-exe
                      , mtl == 2.2.*
   default-language:    Haskell2010
 
-test-suite agda2mlf-test
+test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             Spec.hs
+  other-modules:       CompilerTest
+  main-is:             Tasty.hs
   build-depends:       base
                      , agda2mlf
+                     , Agda
+                     , tasty-discover == 1.1.*
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
-
+  
 source-repository head
   type:     git
   location: git@gitlab.com:janmasrovira/agda2mlf.git
