--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -17,13 +17,15 @@ library
   exposed-modules:     Malfunction.AST
                      , Malfunction.Print
                      , Compiler
+                     , Test
+                     , Backend
   build-depends:       base >= 4.7 && < 5
                      , Agda >= 2.5.2
                      , containers == 0.5.*
                      , mtl == 2.2.*
   default-language:    Haskell2010
 
-executable agda2mlf-exe
+executable agda2mlf
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
