[ fixed #2443 ] Bumped lower bound for equivalence (0.2.5 -> 0.3.2).
equivalence 0.3.2 supports STMonadTrans-0.4.1 which supports
GHC 7.8.*.

--- a/stack-8.0.1.yaml
+++ b/stack-8.0.1.yaml
@@ -3,3 +3,6 @@ resolver: lts-7.19
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+extra-deps:
+- equivalence-0.3.2
+- STMonadTrans-0.4.1
