--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -19,11 +19,12 @@ library
                      , Compiler
                      , Test
                      , Backend
-  build-depends:       base >= 4.7 && < 5
-                     , Agda >= 2.5.2
+  build-depends:       Agda >= 2.5.2
+                     , base >= 4.7 && < 5
                      , containers == 0.5.*
                      , extra == 1.4.*
                      , mtl == 2.2.*
+                     , pretty == 1.1.*
                      , process == 1.4.*
                      , temporary == 1.2.*
   default-language:    Haskell2010
