--- a/Agda.cabal
+++ b/Agda.cabal
@@ -42,6 +42,7 @@ extra-source-files: CHANGELOG.md
                     src/full/undefined.h
                     stack-7.8.4.yaml
                     stack-8.0.1.yaml
+                    stack-8.0.2.yaml
 
 data-dir:           src/data
 data-files:         Agda.css
@@ -635,7 +636,7 @@ test-suite agda-tests
                 , filepath >= 1.3.0.1 && < 1.5
                 , filemanip >= 0.3.6.3 && < 0.4
                 , process >= 1.1.0.2 && < 1.5
-                , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.3 && < 0.5
+                , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.3 && < 0.5 || >= 0.7.1 && < 0.8
                 , regex-tdfa >= 1.2.0 && < 1.3
                 , regex-tdfa-text >= 1.0.0.3 && < 1.1
                 , tasty >= 0.10 && < 0.12
