--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -25,6 +25,7 @@ library
                      , base >= 4.7 && < 5
                      , containers == 0.5.*
                      , extra == 1.5.*
+                     , filepath == 1.4.*
                      , mtl == 2.2.*
                      , pretty == 1.1.*
                      , process == 1.4.*
