--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -48,7 +48,9 @@ test-suite test
   build-depends:       base
                      , agda2mlf
                      , Agda
-                     , tasty-discover == 1.1.*
+                     , tasty == 0.11.*
+                     , tasty-hunit == 0.9.*
+                     , tasty-golden == 2.3.*
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
