--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -17,7 +17,7 @@ library
   exposed-modules:     Malfunction.AST
                      , Malfunction.Run
                      , Compiler
-                     , Test
+                     , Malfunction
                      , Backend
   other-modules:       Primitive
                      , Instances
