--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -47,14 +47,15 @@ test-suite test
   other-modules:       CompilerTest
                      , Utils
   main-is:             Tasty.hs
-  build-depends:       base
+  build-depends:       Agda
                      , agda2mlf
-                     , Agda
+                     , base
                      , bytestring == 0.10.*
+                     , containers == 0.5.*
                      , filepath == 1.4.*
                      , tasty == 0.11.*
-                     , tasty-hunit == 0.9.*
                      , tasty-golden == 2.3.*
+                     , tasty-hunit == 0.9.*
   -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
