--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,22 @@
 /presentation/presentation.pdf
 /presentation/presentation.tex
 auto/
+*.hi
+*.o
+/tmp.hs
+/benchmark/RedBlack.mlf
+/benchmark/RedBlackMlf
+/benchmark/TheList.agda
+/benchmark/Typed.hs
+/benchmark/RedBlack
+/benchmark/RbUntyped
+/benchmark/RbTypedExist
+/benchmark/RbTyped
+MAlonzo
+*.bench
+/examples/red-black/RbTyped
+/examples/red-black/RbTypedExist
+/examples/red-black/RbUntyped
+/examples/red-black/RedBlack
+/examples/red-black/RedBlack.mlf
+/examples/red-black/RedBlackMlf
