--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -60,6 +60,22 @@ test-suite test
   -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
+executable bench
+  hs-source-dirs:      benchmark
+  other-modules:      RedBlack
+                    , Typed
+                    , TypedExist
+                    , Untyped
+                    , AgdaListGen
+  main-is:            Main.hs
+  build-depends:
+                     base
+                     , directory == 1.3.*
+                     , process == 1.4.*
+                     , random == 1.1.*
+  default-language:    Haskell2010
+
+
 source-repository head
   type:     git
   location: git@gitlab.com:janmasrovira/agda2mlf.git
