add benchmarking stuff

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ MAlonzo
 /examples/red-black/RedBlack.mlf
 /examples/red-black/RedBlackMlf
 tmp.hs
+/benchmark/Fold.agda
+/benchmark/RedBlackStrict
