add a lot of benchmark stuff

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,22 @@ MAlonzo
 tmp.hs
 /benchmark/Fold.agda
 /benchmark/RedBlackStrict
+/benchmark/HaskExistType
+/benchmark/HaskExistTypeStrict
+/benchmark/HaskTyped
+/benchmark/HaskTypedStrict
+/benchmark/HaskUntyped
+/benchmark/HaskUntypedStrict
+/benchmark/MAlonzoStrict
+/benchmark/MAlonzox
+/benchmark/Malfunction
+/benchmark/MalfunctionStrict
+/benchmark/RbTypedExistProf
+/benchmark/RbTypedPro
+/benchmark/RbUntypedProf
+/benchmark/RbUntypedT
+/benchmark/RbUntypedTail
+/benchmark/RedBlackAug
+/benchmark/RedBlackMlfAug
+/benchmark/RedBlackMlfStrict
+/benchmark/RedBlackT
