--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ tmp.hs
 /benchmark/RedBlackMlfAug
 /benchmark/RedBlackMlfStrict
 /benchmark/RedBlackT
+/presentation/report.tex
+/presentation/report.pdf
