--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -13,7 +13,7 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src
+  hs-source-dirs:      src/full
   exposed-modules:     Agda.Compiler.Malfunction.AST
                      , Agda.Compiler.Malfunction.Run
                      , Agda.Compiler.Malfunction.Compiler
