--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -60,8 +60,8 @@ test-suite test
   -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
-executable bench
-  hs-source-dirs:      benchmark
+executable agda2mlf-bench
+  hs-source-dirs:      benchmark/agda2mlf
   other-modules:      RedBlack
                     , Typed
                     , TypedExist
