--- a/agda2mlf.cabal
+++ b/agda2mlf.cabal
@@ -41,9 +41,9 @@ executable agda2mlf
                      , agda2mlf
   default-language:    Haskell2010
 
-test-suite test
+test-suite agda2mlf-test
   type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
+  hs-source-dirs:      test/agda2mlf
   other-modules:       CompilerTest
                      , Utils
   main-is:             Tasty.hs
@@ -57,6 +57,7 @@ test-suite test
                      , tasty == 0.11.*
                      , tasty-golden == 2.3.*
                      , tasty-hunit == 0.9.*
+                     , directory == 1.3.*
   -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
