--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,44 @@
-.stack-work/*
+# Keep this file in alphabetic order please!
+
+.*.sw[a-p]
+.*.vim
+.cabal-sandbox/
+.stack-work/
+.DS_Store
+.sw[a-p]
 *.agdai
 *.hi
 *.o
-/tmp.hs
-MAlonzo
-*.bench
+*.tmp
+*.tmp.*
+*~
+\#*\#
+.\#*
+agda-ffi/dist
+agda-stdlib
+autom4te.cache
+cabal.sandbox.config
+config.log
+config.status
+configure
+dist/
+dist-*/
+examples/compiler/main
+hlint-report.html
+test/**/MAlonzo
+examples/**/MAlonzo
+mk/config.mk
+mk/parallel-tests.mk
+notes/style/haskell-style.tex
+src/full/Agda/Syntax/Parser/Lexer.hs
+src/full/Agda/Syntax/Parser/Parser.hs
+src/full/tags
+src/full/TAGS
 stack.yaml
+test/compiler/Main
+test/hello
+test/latex-backend/succeed/latex/
+test/succeed/latex/
+test/succeed/Issue1441
+exec-test*
+pkg-build*
