[ api-test ] Added Agda file for the pretty-print test.

--- a/test/api/Makefile
+++ b/test/api/Makefile
@@ -6,15 +6,18 @@ AGDA = $(AGDA_BIN) -v0
 
 all : Issue1168 PrettyInterface
 
+%.agdai : %.agda $(AGDA_BIN)
+	$(AGDA) $<
+
 Issue1168 : Issue1168.agdai Issue1168.hs
 	ghc -Wall -Werror -package Agda-$(VERSION) -o /tmp/$@ $@.hs
 	/tmp/$@
 	@rm /tmp/$@
 
-Issue1168.agdai : Issue1168.agda $(AGDA_BIN)
-	$(AGDA) $<
-
-PrettyInterface : Issue1168.agdai PrettyInterface.hs
+PrettyInterface : PrettyInterface.agdai PrettyInterface.hs
 	ghc -Wall -Werror -package Agda-$(VERSION) -o /tmp/$@ $@.hs
 	/tmp/$@
 	@rm /tmp/$@
+
+clean :
+	rm -f *.agdai *.hi *.o
