[ api-tests ] Removed duplicate rules.

--- a/test/api/Makefile
+++ b/test/api/Makefile
@@ -6,18 +6,14 @@ AGDA = $(AGDA_BIN) -v0
 
 tmpdir := $(shell mktemp -d)
 
-all : Issue1168 PrettyInterface
+all : Issue1168.api PrettyInterface.api
 
 %.agdai : %.agda $(AGDA_BIN)
 	$(AGDA) $<
 
-Issue1168 : Issue1168.agdai Issue1168.hs
-	ghc -Wall -Werror -package Agda-$(VERSION) -o $(tmpdir)/$@ $@.hs
-	$(tmpdir)/$@
-
-PrettyInterface : PrettyInterface.agdai PrettyInterface.hs
-	ghc -Wall -Werror -package Agda-$(VERSION) -o $(tmpdir)/$@ $@.hs
-	$(tmpdir)/$@
+%.api : %.agdai %.hs
+	ghc -Wall -Werror -package Agda-$(VERSION) -o $(tmpdir)/$* $*.hs
+	$(tmpdir)/$*
 
 clean :
 	rm -f *.agdai *.hi *.o
