[ test ] serious quickcheck properties for substitution combinators

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -687,6 +687,7 @@ test-suite internal-tests
                 , InternalTests.Termination.SparseMatrix
                 , InternalTests.Termination.Termination
                 , InternalTests.TypeChecking
+                , InternalTests.TypeChecking.Substitute
                 , InternalTests.TypeChecking.Coverage.SplitTree
                 , InternalTests.TypeChecking.Free
                 , InternalTests.TypeChecking.Free.Lazy
