--- a/Agda.cabal
+++ b/Agda.cabal
@@ -748,6 +748,9 @@ test-suite internal-tests
   default-extensions:  ConstraintKinds
                      , DataKinds
                      , DefaultSignatures
+                     , DeriveFoldable
+                     , DeriveFunctor
+                     , DeriveTraversable
                      , ExistentialQuantification
                      , FlexibleContexts
                      , FlexibleInstances
