--- a/.travis.yml
+++ b/.travis.yml
@@ -110,13 +110,13 @@ matrix:
 
     # Since `stack haddock` compiles Agda but `cabal haddock` does
     # not, this test is faster using `BUILD=CABAL` [Issue #2188].
-    - env: TEST=HADDOCK GHC_VER=8.0.2 BUILD=CABAL CABAL_VER=1.24
+    - env: TEST=HADDOCK GHC_VER=8.2.1 BUILD=CABAL CABAL_VER=2.0
       addons:
         apt:
           packages:
             - alex-3.1.7
-            - cabal-install-1.24
-            - ghc-8.0.2
+            - cabal-install-2.0
+            - ghc-8.2.1
             - happy-1.19.5
           sources:
             - hvr-ghc
@@ -136,8 +136,8 @@ matrix:
 
   # Builds are loooong, we want to send an email as fast as possible.
   fast_finish: true
-  allow_failures:
-  - env: TEST=MAIN GHC_VER=8.2.1 BUILD=CABAL CABAL_VER=2.0
+  # allow_failures:
+  # - env: TEST=MAIN GHC_VER=8.2.1 BUILD=CABAL CABAL_VER=2.0
 
 ##############################################################################
 before_install:
