[ #2655 ] Temporally disabled `make TAGS` with GHC 7.8.4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -362,7 +362,8 @@ script:
        make BUILD_DIR=$BUILD_DIR lib-interaction;
     fi
 
-  - if [[ $TEST = "MAIN" ]]; then
+# ASR (2017-07-25). Temporally disabled for GHC 7.8.4 [Issue #2655].
+  - if [[ $TEST = "MAIN" && $GHC_VER != "7.8.4" ]]; then
        make BUILD_DIR=$BUILD_DIR TAGS;
     fi
 
