--- a/Agda.cabal
+++ b/Agda.cabal
@@ -115,14 +115,14 @@ library
     build-depends:  Win32 >= 2.2 && < 2.4
 
   build-depends:  async >= 2.0.2 && < 2.2
-                , array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.11
+                , array >= 0.5.0.0 && < 0.6
+                , base >= 4.7.0.2 && < 4.11
                 , binary >= 0.7.2.1 && < 0.9
                 , boxes >= 0.1.3 && < 0.2
-                , bytestring >= 0.10.0.2 && < 0.11
-                , containers >= 0.5.0.0 && < 0.6
+                , bytestring >= 0.10.4.0 && < 0.11
+                , containers >= 0.5.5.1 && < 0.6
                 , data-hash >= 0.2.0.0 && < 0.3
-                , deepseq >= 1.3.0.1 && < 1.5
+                , deepseq >= 1.3.0.2 && < 1.5
                 , directory >= 1.2.0.1 && < 1.4
                 , EdisonCore >= 1.3.1.1 && < 1.3.2
                 , edit-distance >= 0.2.1.2 && < 0.3
@@ -151,14 +151,14 @@ library
                 , parallel >= 3.2.0.4 && < 3.3
                 -- pretty 1.1.1.2 and 1.1.1.3 do not follow the
                 -- package versioning policy.
-                , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
-                , process >= 1.1.0.2 && < 1.7
+                , pretty >= 1.1.1.1 && < 1.1.1.2 || >= 1.1.2 && < 1.2
+                , process >= 1.2.0.0 && < 1.7
                 , regex-tdfa >= 1.2.2 && < 1.3
                 , stm >= 2.4.4 && < 2.5
                 , strict >= 0.3.2 && < 0.4
-                , template-haskell >= 2.8.0.0 && < 2.13
+                , template-haskell >= 2.9.0.0 && < 2.13
                 , text >= 0.11.3.1 && < 1.3
-                , time >= 1.4.0.1 && < 1.9
+                , time >= 1.4.2 && < 1.9
                 -- In hTags the mtl library must be compiled with the
                 -- version of transformers shipped GHC. The lower
                 -- bound is the version of transformers shipped with
@@ -169,11 +169,6 @@ library
                 , transformers >= 0.4.2.0 && < 0.6
                 , unordered-containers >= 0.2.5.0 && < 0.3
                 , xhtml >= 3000.2.1 && < 3000.3
-
-  if impl(ghc < 7.8)
-    build-depends:  base-orphans >= 0.3.1 && < 0.5
-                  , tagged >= 0.8.5 && < 0.9
-
 
   if impl(ghc < 7.10)
     build-depends: void >= 0.5.4 && < 0.9
@@ -492,30 +487,28 @@ library
   if impl(ghc >= 8.0)
     ghc-options: -Wunrecognised-warning-flags
 
-  if impl(ghc >= 7.6.3)
+  if impl(ghc >= 7.8)
     ghc-options: -fwarn-deprecated-flags
                  -fwarn-dodgy-exports
                  -fwarn-dodgy-foreign-imports
                  -fwarn-dodgy-imports
                  -fwarn-duplicate-exports
+                 -fwarn-empty-enumerations
                  -fwarn-hi-shadowing
                  -fwarn-identities
                  -fwarn-incomplete-patterns
+                 -fwarn-inline-rule-shadowing
                  -fwarn-missing-fields
                  -fwarn-missing-methods
                  -fwarn-missing-signatures
                  -fwarn-tabs
+                 -fwarn-typed-holes
+                 -fwarn-overflowed-literals
                  -fwarn-overlapping-patterns
                  -fwarn-unrecognised-pragmas
                  -fwarn-unused-do-bind
                  -fwarn-warnings-deprecations
                  -fwarn-wrong-do-bind
-
-  if impl(ghc >= 7.8)
-    ghc-options: -fwarn-empty-enumerations
-                 -fwarn-inline-rule-shadowing
-                 -fwarn-typed-holes
-                 -fwarn-overflowed-literals
 
   if impl(ghc >= 7.10)
      ghc-options: -fwarn-unticked-promoted-constructors
@@ -526,13 +519,10 @@ library
   if impl(ghc >= 7.8) && impl(ghc < 7.10)
     ghc-options: -fwarn-amp
 
-  -- This option will be removed in GHC 8.0.1.
-  if impl(ghc >= 7.6) && impl(ghc < 8.0)
-    ghc-options: -fwarn-pointless-pragmas
-
-  -- This option will be deprected in GHC 8.0.1.
+  -- These options will be removed in GHC 8.0.1.
   if impl(ghc >= 7.8) && impl(ghc < 8.0)
     ghc-options: -fwarn-duplicate-constraints
+                 -fwarn-pointless-pragmas
 
   -- This option will be deprected in GHC 8.0.1.
   if impl(ghc >= 7.10) && impl(ghc < 8.0)
@@ -589,7 +579,7 @@ executable agda
 
                   -- Nothing is used from the following package,
                   -- except for the prelude.
-                , base >= 4.6.0.1 && < 6
+                , base >= 4.7.0.2 && < 6
   default-language: Haskell2010
   if impl(ghc >= 7)
     -- If someone installs Agda with the setuid bit set, then the
@@ -603,10 +593,10 @@ executable agda-mode
   hs-source-dirs:   src/agda-mode
   main-is:          Main.hs
   other-modules:    Paths_Agda
-  build-depends:    base >= 4.6.0.1 && < 4.11
-                  , directory >= 1.2.0.1 && < 1.4
-                  , filepath >= 1.3.0.1 && < 1.5
-                  , process >= 1.1.0.2 && < 1.7
+  build-depends:    base >= 4.7.0.2 && < 4.11
+                  , directory >= 1.2.1.0 && < 1.4
+                  , filepath >= 1.3.0.2 && < 1.5
+                  , process >= 1.2.0.0 && < 1.7
   default-language: Haskell2010
 
 -- Cabal testsuite integration has some serious bugs, but we
@@ -632,14 +622,14 @@ test-suite agda-tests
                     , UserManual.Tests
                     , Utils
 
-  build-depends:  array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.11
-                , bytestring >= 0.10.0.2 && < 0.11
-                , containers >= 0.5.0.0 && < 0.6
-                , directory >= 1.2.0.1 && < 1.4
-                , filepath >= 1.3.0.1 && < 1.5
+  build-depends:  array >= 0.5.0.0 && < 0.6
+                , base >= 4.7.0.2 && < 4.11
+                , bytestring >= 0.10.4.0 && < 0.11
+                , containers >= 0.5.5.1 && < 0.6
+                , directory >= 1.2.1.0 && < 1.4
+                , filepath >= 1.3.0.2 && < 1.5
                 , filemanip >= 0.3.6.3 && < 0.4
-                , process >= 1.1.0.2 && < 1.7
+                , process >= 1.2.0.0 && < 1.7
                 , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.3 && < 0.5 || >= 0.7.1 && < 0.8
                 , regex-tdfa >= 1.2.0 && < 1.3
                 , regex-tdfa-text >= 1.0.0.3 && < 1.1
@@ -649,10 +639,6 @@ test-suite agda-tests
                 , temporary >= 1.2.0.3 && < 1.3
                 , text >= 0.11.3.1 && < 1.3
                 , unix-compat >= 0.4.3.1 && < 0.5
-  if impl(ghc < 7.8)
-    -- provide System.Environment.setEnv for pre-GHC7.6
-    build-depends:  setenv >= 0.1.1.3 && < 0.2
-
 
   ghc-options:      -threaded
                     -Wall
@@ -727,10 +713,10 @@ test-suite internal-tests
                 , InternalTests.Utils.Warshall
 
   build-depends:  Agda
-                , array >= 0.4.0.1 && < 0.6
-                , base >= 4.6.0.1 && < 4.11
-                , containers >= 0.5.0.0 && < 0.6
-                , filepath >= 1.3.0.1 && < 1.5
+                , array >= 0.5.0.0 && < 0.6
+                , base >= 4.7.0.2 && < 4.11
+                , containers >= 0.5.5.1 && < 0.6
+                , filepath >= 1.3.0.2 && < 1.5
                 -- mtl-2.1 contains a severe bug.
                 --
                 -- mtl >= 2.2 && < 2.2.1 doesn't export Control.Monad.Except.
@@ -777,30 +763,28 @@ test-suite internal-tests
   if impl(ghc >= 8.0)
     ghc-options: -Wunrecognised-warning-flags
 
-  if impl(ghc >= 7.6.3)
+  if impl(ghc >= 7.8)
     ghc-options: -fwarn-deprecated-flags
                  -fwarn-dodgy-exports
                  -fwarn-dodgy-foreign-imports
                  -fwarn-dodgy-imports
                  -fwarn-duplicate-exports
+                 -fwarn-empty-enumerations
                  -fwarn-hi-shadowing
                  -fwarn-identities
                  -fwarn-incomplete-patterns
+                 -fwarn-inline-rule-shadowing
                  -fwarn-missing-fields
                  -fwarn-missing-methods
                  -fwarn-missing-signatures
                  -fwarn-tabs
+                 -fwarn-typed-holes
+                 -fwarn-overflowed-literals
                  -fwarn-overlapping-patterns
                  -fwarn-unrecognised-pragmas
                  -fwarn-unused-do-bind
                  -fwarn-warnings-deprecations
                  -fwarn-wrong-do-bind
-
-  if impl(ghc >= 7.8)
-    ghc-options: -fwarn-empty-enumerations
-                 -fwarn-inline-rule-shadowing
-                 -fwarn-typed-holes
-                 -fwarn-overflowed-literals
 
   if impl(ghc >= 7.10)
      ghc-options: -fwarn-unticked-promoted-constructors
@@ -811,13 +795,10 @@ test-suite internal-tests
   if impl(ghc >= 7.8) && impl(ghc < 7.10)
     ghc-options: -fwarn-amp
 
-  -- This option will be removed in GHC 8.0.1.
-  if impl(ghc >= 7.6) && impl(ghc < 8.0)
-    ghc-options: -fwarn-pointless-pragmas
-
-  -- This option will be deprected in GHC 8.0.1.
+  -- These options will be removed in GHC 8.0.1.
   if impl(ghc >= 7.8) && impl(ghc < 8.0)
     ghc-options: -fwarn-duplicate-constraints
+                 -fwarn-pointless-pragmas
 
   -- This option will be deprected in GHC 8.0.1.
   if impl(ghc >= 7.10) && impl(ghc < 8.0)
