--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -13,20 +13,20 @@ executable hTags
   other-modules: Tags
 
   build-depends:  base >= 4.7.0.2 && < 4.11
-                , directory >= 1.2.1.0 && < 1.4
-                , containers >= 0.5.5.1 && < 0.6
-                , filepath >= 1.3.0.2 && < 1.5
-                , ghc >= 7.8.4 && < 8.3
-                , process >= 1.2.0.0 && < 1.7
-                , strict >= 0.3.2 && < 0.4
                 -- Most APIs we use are unchanged since 1.10, except for
                 -- Exception in Language.Haskell.Extension. Compare:
                 -- http://hackage.haskell.org/package/Cabal-1.10.2.0/docs/Language-Haskell-Extension.html
                 -- http://hackage.haskell.org/package/Cabal-1.12.0/docs/Language-Haskell-Extension.html
                 --
-                -- We must still support 1.18.1.5 since GHC 7.8.4 was built using
-                -- that.
+                -- We must still support 1.18.1.5 since GHC 7.8.4 was
+                -- built using that.
                 , Cabal >= 1.18.1.5 && < 2.1
+                , containers >= 0.5.5.1 && < 0.6
+                , directory >= 1.2.1.0 && < 1.4
+                , filepath >= 1.3.0.2 && < 1.5
+                , ghc >= 7.8.4 && < 8.3
+                , process >= 1.2.0.0 && < 1.7
+                , strict >= 0.3.2 && < 0.4
 
     -- Since we are using GHC as a library and transformers 0.3.0.0
     -- was shipped as a *base* library of GHC 7.8.*, we must use a
