--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.5.3
+version:         2.5.2.20170813
 cabal-version:   >= 1.10
 build-type:      Custom
 license:         OtherLicense
