--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc"
+    - env: TEST=STACKAGE GHC_VER=8.0.2 BUILD=STACK ARGS="--stack-yaml stack-8.0.2.yaml --system-ghc" CPPHS_MANUAL_INSTALL=NO
       addons:
         apt:
           packages:
@@ -95,7 +95,7 @@ matrix:
           sources:
             - hvr-ghc
 
-    - env: TEST=STACKAGE GHC_VER=7.10.3 BUILD=STACK ARGS="--stack-yaml stack-7.10.3.yaml --system-ghc"
+    - env: TEST=STACKAGE GHC_VER=7.10.3 BUILD=STACK ARGS="--stack-yaml stack-7.10.3.yaml --system-ghc" CPPHS_MANUAL_INSTALL=YES
       addons:
         apt:
           packages:
@@ -201,12 +201,18 @@ install:
 
 # TODO (2016-02-21): Split the long lines (`\` doesn't work).
 
+# We have to manually install `cpphs` for older snapshots because `stack` does not
+# install build tools outside the assigned snapshot. [Issue commercialhaskell/stack #595]
+
 # N.B. that we use the `--force-reinstalls` option [Issue 1520].
 
   - if [[ $TEST = "MAIN" || $TEST = "HADDOCK" ]]; then
        make CABAL_OPTS='--only-dependencies --force-reinstalls' install-bin;
     elif [[ $TEST = "STACKAGE" ]]; then
-         stack build $ARGS --no-terminal --test --only-dependencies;
+       if [[ $CPPHS_MANUAL_INSTALL = "YES" ]]; then
+           stack install $ARGS cpphs;
+       fi;
+       stack build $ARGS --no-terminal --test --only-dependencies;
     fi
 
 ##############################################################################
