Add the stack.yaml file for GHC 7.8.4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,14 @@ matrix:
             - ghc-7.10.3
           sources:
             - hvr-ghc
+    
+    - env: TEST=STACKAGE GHC_VER=7.8.4 BUILD=STACK ARGS="--stack-yaml stack-7.8.4.yaml --system-ghc" CPPHS_MANUAL_INSTALL=YES
+      addons:
+        apt:
+          packages:
+            - ghc-7.8.4
+          sources:
+            - hvr-ghc
 
     # Since `stack haddock` compiles Agda but `cabal haddock` does
     # not, this test is faster using `BUILD=CABAL` [Issue #2188].
