--- a/Agda.cabal
+++ b/Agda.cabal
@@ -40,6 +40,8 @@ tested-with:        GHC == 7.8.4
 extra-source-files: CHANGELOG.md
                     README.md
                     src/full/undefined.h
+                    stack-7.8.4.yaml
+                    stack-7.10.3.yaml
                     stack-8.0.2.yaml
 
 data-dir:           src/data
